tests/negative/gold/abstractF_test.gold
tests/negative/abstractF_test.toit:6:11: error: Expected name of declaration
  abstract
          ^
Compilation failed.
